# hachimi_plugin_sdk_rs

./: Cargo.toml  README.md
examples/hello_hachimi/: Cargo.toml
examples/hello_hachimi/src/: lib.rs
hachimi_il2cpp/: Cargo.toml
hachimi_il2cpp/src/: resolve_api.rs  types.rs
hachimi_il2cpp_2020/: Cargo.toml
hachimi_il2cpp_2020/src/: lib.rs  resolve_api.rs  types.rs
hachimi_plugin_macros/: Cargo.toml
hachimi_plugin_macros/src/: lib.rs
src/: api.rs  lib.rs  log.rs  sys.rs
src/il2cpp/: ext.rs  helpers.rs  mod.rs
