[package]
name = "examples_hello_hachimi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hachimi_plugin_sdk = { path = "../..", version = "*" }
log = "0.4"

[features]
default = ["il2cpp"]
il2cpp = ["hachimi_plugin_sdk/il2cpp"]
il2cpp_2020 = ["hachimi_plugin_sdk/il2cpp_2020"]